# nf_ws

./: .gitignore  AGENTS.md  GEMINI.md  README.md  auto_git_push.sh  clean_and_init.sh  pyproject.toml  pytest.ini  run_pytest_html.py
apps/webui_streamlit/: nf_auto_runner_full.py  streamlit_app.py
config/: agent_config.yaml  features.yaml  loto_default_config.yaml  webui_database.yaml  webui_logging_config.yaml  webui_models.yaml  webui_ui_config.yaml
docs/: 00_DOCS_INDEX.md  FEATURE_SYSTEM_SPEC.md  Feature_Expansion_Proposal.md  Gemini-AutoML時系列予測システム仕様書.md  IMPLEMENTATION_PLAN.md  NeuralForecast AutoML Platform.md  NeuralForecast_AutoML_Platform_Specification.md  QUICKSTART_EXTENDED.md  README.md  README_ANALYSIS.md  README_EXTENDED.md  README_USAGE.md  REFORM_PLAN_nfloto_platform.md  SYSTEM_DESIGN_AND_RUNBOOK.md  UI_UX_IMPROVEMENT_DESIGN.md  USER_GUIDE.md  change_history_template.md  repo.md
hist/: 0001_error_investigation_and_fix_plan.md  CHANGELOG.md  REFAC_PLAN.md
pytest_reports/: report.html
report/: README.md  change_history_2025-11-26_codex_auto.md  pytest_report.html  pytest_report_example.html  report.html  repository_audit.md
sql/: 001_create_nf_model_run_tables.sql  002_extend_metadata_tables.sql  003_ts_research_schema.sql  004_add_agent_rag_schema.sql  005_create_loto_data_tables.sql  analysis_queries.sql  nf_pg_check.sql
tests/: TEST_MATRIX.md  TEST_PLAN.md  conftest.py  test_core_settings.py  test_model_registry_tsfm.py  test_smoke_imports.py  test_ts_research_store_query_helper.py  test_ts_stack_extension.py  test_tslib_dataset_adapter.py
(+138 files in other folders)
