[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nf-loto-platform"
version = "0.1.0"
description = "NeuralForecast Loto Suite unified platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

authors = [
  { name = "Ryohei Hashimoto" }
]

dependencies = [
  "pandas",
  "numpy",
  "psycopg2-binary",
  "neuralforecast",
  "pyyaml",
  "mlflow",
  "wandb",
  "prometheus-client",
  "psutil",
  "jinja2",
  "python-dotenv",
  "tqdm",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "dash",
  "plotly",
  "streamlit",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-sugar",
  "pytest-xdist",
  "pytest-randomly",
  "pytest-cov",
  "pytest-html",
  "hypothesis",
  "black",
  "isort",
  "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["nf_loto_platform*"]
